--- a/Summary.ipynb
+++ b/Summary.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4"
+    "## 4 Numerical methods for describing data"
    ]
   },
   {
@@ -77,7 +77,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5"
+    "## 5 Summarizing bivariate data"
    ]
   },
   {
@@ -169,7 +169,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6\n"
+    "## 6 Probability\n"
    ]
   },
   {
@@ -187,7 +187,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 7"
+    "# 7 Random variable and probability distribution"
    ]
   },
   {
@@ -245,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8"
+    "## 8 Sampling variability and sampling distribution"
    ]
   },
   {
@@ -265,7 +265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9"
+    "## 9 Estimation using a single sample"
    ]
   },
   {
@@ -276,6 +276,117 @@
     "<b>Confidence Interval</b> An interval that is computed from sample data, and provides a range of plausible values for a population characteristics\\\n",
     "<b>Confidence Level</b> A number that provides information on how much \"confidence\" we can have in the method used to construct a confidence interval estimate. The confidence level specifies the percentage of <b>all possible samples</b> that will produce an interval containing the value of the population characteristic."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\hat{p} \\pm (z\\ critical\\ value)\\frac{\\sigma}{\\sqrt{n}}$\\\n",
+    "Formula used to construct a confidence interval for p when sample size is large.\\\n",
+    "$n=p(1-p)(\\frac{1.96}{B})^2$\\\n",
+    "Formula used to compute the sample size necessary for estimating p to within an amount B with 95% confidence.\\\n",
+    "$\\overline{x}\\pm (z\\ critical\\ value)\\frac{\\sigma}{\\sqrt{n}} $\\\n",
+    "Formula used to construct a confidence interval for $\\mu$ when $\\sigma$ is known and either population distribution is normal or sample size is large\\\n",
+    "$\\overline{x}\\pm (t\\ critical value)\\frac{s}{\\sqrt{n}}$\\\n",
+    "Formula used to construct a confidence interval for $\\mu$ when $\\sigma$ is <b>unknown</b> and either population distribution is normal or sample size is large\\\n",
+    "$n=(\\frac{1.96\\sigma}{B})^2$\\\n",
+    "Formula used to compute sample size neccessary to estimating $\\mu$ to within an amount B with 95% confidence.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 10 Hypothesis testing using a single sample"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Hypothesis: </b> A claim about the value of a population characteristics\\\n",
+    "<b>Null Hypothesis $H_0$: </b> The hypothesis initially assumed to be true. It has the form $H_0$: Population characteristic = hypothesized value\\\n",
+    "<b>Alternative hypothesis $H_\\alpha$: </b> A hyphothesis that specifies a claim that is contradictory to $H_0$ and is judged by more plausible claim when $H_0$ is rejected."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Type I error: </b> Rejecting $H_0$ when $H_0$ is True. The probability of a Type I error is denoted by $\\alpha$ and is referred to as the significance level of the test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Type II error:</b> Not rejecting $H_0$ when $H_0$ is False. The probability of a Type II error is denoted by $\\beta$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Test statistics: </b> A value computed from sample data that is then used as a basis for making decision between $H_0$ and $H_\\alpha$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$P-value$ The probability, computed assuming $H_0$ is  true, of obtaining a value of test statistics at least as contradictory to $H_0$ as what actually resulted. $H_0$ is rejected if P-value $\\leq\\alpha$, and not rejected of P-value $\\gt\\alpha$, where $\\alpha$ is the chose significance level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A test statistics for testing $H_0$: p = hypothesized value when the sample size is large. The P-value is the area under the z curve.\n",
+    "<div align='center'> $z\\ =\\ \\frac{\\hat{p}-hypothesized\\ value}{\\sqrt{\\frac{(hyp. val)(1-hyp.val)}{n}}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A test statistics for testing $H_0$:$\\mu$ = hypothesized value when $\\sigma$ is known\n",
+    "<div align='center'>$z\\ =\\ \\frac{\\overline{x}-hypothesized\\ value}{\\frac{s}{\\sqrt{n}}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A test statistics for testing $H_0:$ $\\mu$ = hypothesized value when $\\sigma$ is unknow, population distribution is normal or data size is large.\n",
+    "<div align='center'>$t\\ =\\ \\frac{\\overline{x}-hypothesized\\ value}{\\frac{s}{\\sqrt{n}}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Power</b> of a test is the probability of rejecting null hypothesis. Power is affected by the size of the difference between hypothesized value and the actual value, the sample size, and the significance level."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 11 Comparing two populations or treatments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test statistic for testing $H_0$: $\\mu_1\\ -\\ \\mu_2$ = hypothesized value when the samples are independent selected and the sample size is large or it is reasonable to assume that both population distributions are normal\n",
+    "<div align='center'>$t\\ =\\ \\frac{(\\overline{x_1}-\\overline{x_2}) - hypothesized\\ value}{\\sqrt{\\frac{s^2_1}{n_1}+\\frac{s^2_2}{n_2}}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
