--- a/Summary.ipynb
+++ b/Summary.ipynb
@@ -379,14 +379,88 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The test statistic for testing $H_0$: $\\mu_1\\ -\\ \\mu_2$ = hypothesized value when the samples are independent selected and the sample size is large or it is reasonable to assume that both population distributions are normal\n",
+    "The test statistic for testing $H_0$: $\\mu_1\\ -\\ \\mu_2$ = hypothesized value when the samples are independently selected and the sample size is large or it is reasonable to assume that both population distributions are normal\n",
     "<div align='center'>$t\\ =\\ \\frac{(\\overline{x_1}-\\overline{x_2}) - hypothesized\\ value}{\\sqrt{\\frac{s^2_1}{n_1}+\\frac{s^2_2}{n_2}}}$</div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A formula for constructing a confidence interval for $\\mu_1\\ -\\ \\mu_2\\ = hypothesized\\ value$ when the samples are independently selected and the sample sizes are large or population distributions are assumed normal distribution\n",
+    "<div align='center'>$(\\overline{x_1}-\\overline{x_2})\\pm (t\\ critical\\ value)\\sqrt{\\frac{s^2_1}{n_1} + \\frac{s^2_2}{n_2}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The formula for determining df for the two-sample t test and confidence interval\n",
+    "<div align='center'>$df\\ =\\ \\frac{(V_1+V_2)^2}{\\frac{V_1^2}{n_1-1}+\\frac{V_2^2}{n_2-1}}$ where $V_1\\ =\\ \\frac{s_1^2}{n_1}$ and $V_2\\ =\\ \\frac{s_2^2}{n_2}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\overline{x_d}$ the sample mean differences\\\n",
+    "$s_d$ the standard deviation of the sample differences\\\n",
+    "$\\mu_d$ the mean value of population differences\\\n",
+    "$\\sigma_d$ the standard deviation of population differences\\\n",
+    "$t\\ =\\ \\frac{\\overline{x_d}\\ -\\ hypothesized\\ value}{\\frac{s_d}{\\sqrt{n}}}$ the paired t-statistics for testing $H_0: \\mu_d = hypothesized\\ value$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " $\\overline{x_d}\\ \\pm\\ (t\\ critical\\ value)\\frac{s_d}{\\sqrt{n}}$ the paired t confidence interval formula"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " $\\hat{p_c}$ is the statistic for estimating the common population proportion when $p_1\\ =\\ p_2$\n",
+    " <div align='center'>$\\hat{p_c}\\ =\\ \\frac{n_1\\hat{p_1}+n_2\\hat{p_2}}{n_1+n_2}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The test statistic for testing $H_0: p_1=p_2$ when the samples are independently selected and both sample sizes are large.\n",
+    "<div align='center'>$z\\ =\\ \\frac{\\hat{p_1}-\\hat{p_2}}{\\sqrt{\\frac{\\hat{p_c}(1-\\hat{p_c})}{n_1}+\\frac{\\hat{p_c}(1-\\hat{p_c})}{n_2}}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A formula for constructing a confidence interval for $p_1-p_2$ when both sample sizes are large\n",
+    "<div align='center'>$(\\hat{p_1}-\\hat{p_2})\\pm(z\\ critical\\ value)\\sqrt{\\frac{\\hat{p_1}(1-\\hat{p_1})}{n_1}+\\frac{\\hat{p_2}(1-\\hat{p_2})}{n_2}}$</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 12 The analysis of categorical data and goodness-of-Fit tests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>One-way frequency table:</b> A compact way of summarizing data on a categorical variable. It gives number of times each of the possible categories in the data set occurs (frequencies)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A statistic used to provide a comparison between observed counts and those expected when a given hypothesis is true. When none of the expected counts are too small, $$<div align='center'>$\\chi^2\\ =\\ \\Sigma_{all\\ cells}\\frac{(Observed\\ cell\\ count -\\ expected\\ cell\\ count)^2}{expected\\ cell\\ count}$</div>"
+   ]
   }
  ],
  "metadata": {
