--- a/Summary.ipynb
+++ b/Summary.ipynb
@@ -461,6 +461,161 @@
    "source": [
     "A statistic used to provide a comparison between observed counts and those expected when a given hypothesis is true. When none of the expected counts are too small, $$<div align='center'>$\\chi^2\\ =\\ \\Sigma_{all\\ cells}\\frac{(Observed\\ cell\\ count -\\ expected\\ cell\\ count)^2}{expected\\ cell\\ count}$</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 13 Simple Linear Regression and Correlation: Inferential method"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Simple linear regression model</b> $y\\ =\\ \\alpha + \\beta x + e$\\\n",
+    "This model assumes that there is a line with slope $\\beta$ and y intercept $\\alpha$, called the population regression line, such that an observation deviates from the line by a randome amount $e$. The random deviation is assumed to have a normal distribution with mean zero and standard deviation $\\sigma$, and random deviations for different observations are assumed to be independent of one another"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Estimated regression line</b> $\\hat{y}\\ =\\ a+bx$ The least-squares line in 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$s_e = \\sqrt{\\frac{SSResid}{n-2}}$\\\n",
+    "The point estimate of the standard deviation $\\sigma$, with assosiated degrees of freedom n -2\\\n",
+    "SSResid = $\\Sigma(y-\\hat{y})^2$ = $\\Sigma y^2 - a\\Sigma y - b\\Sigma xy$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$s_b=\\frac{s_e}{\\sqrt{S_{xx}}}$\\\n",
+    "The estimated standard deviation of the statistic b.\\\n",
+    "b = point estimate of $\\beta = \\frac{S_{xy}}{S_{xx}}$\\\n",
+    "a = point estimate of $\\alpha = \\overline{y} - b\\overline{x}$\\\n",
+    "where\\\n",
+    "$S_{xy} = \\Sigma xy - \\frac{(\\Sigma x)(\\Sigma y)}{n}$ and $S_{xx} = \\Sigma x^2 - \\frac{(\\Sigma x)^2}{n}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$t = \\frac{b-\\beta}{s_b}$\\\n",
+    "standardize t-distribution with df = (n-2), used to obtain a confidence interval for $\\beta$\\\n",
+    "$b\\pm (t\\ critical\\ value)s_b$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(To be updated later)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 14 Multiple Regression Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Additive multiple regression model</b> $y = \\alpha + \\beta_1x_1 + \\beta_2x_2+...+\\beta_kx_k + e$\\\n",
+    "Specifies a generate probabilistic relationship between y and k predictor variables $x_1, x_2,...,x_k$ where $\\alpha, \\beta_1,...,\\beta_k$ is the population regression function (the mean value of y for fixed values of $x_1,x_2,...,x_k$)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Estimated regression function </b> $\\hat{y} = a + b_1x_1 + b_2x_2 + .. + b_kx_k$\\\n",
+    "applying the principle of least-square"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Coefficient of multiple determination, $R^2= 1 - \\frac{SSResid}{SSTo}$,based on n - (k + 1) degrees of fredom"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adjusted $R^2$: A downward adjustment of $R^2$ that depends on the number of predictors k and the sample size n\\\n",
+    "Adjusted $R^2$ = $1 - [\\frac{n-1}{n-(k+1)}](\\frac{SSResid}{SSTo})$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "F distribution: A probability distribution used in the multiple regression model ultility test. An F distribution is specified by a numerator df and a denominator df\\\n",
+    "$F = \\frac{SSRegr/k}{SSResid/(n-(k+1))}$\\\n",
+    "or\\\n",
+    "$F = \\frac{R^2/k}{(1-R^2)(n-(k+1))}$\\\n",
+    "$SSRegr = SSTo - SSResid$: Regression sum of square\\\n",
+    "The test statistics for testing $H_0: \\beta_1 = \\beta_2 = .. = \\beta_k = 0$ which states there is no useful linear relationship between y and any of the model predictors. The F test is upper tailed and is based on numerator df = k an denominator df = n - (k+1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 15 Analysis of Variance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Single-factor analysis of variance (ANOVA): </b> a test procedure for determining whether there are significant differences among k population or treatment means. The hypotheses testd are $H_0: \\mu_1 = \\mu_2 = .. = \\mu_k$ vs $H_\\alpha$: at least two $\\mu$'s differ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Treatment sum of square:</b> SSTr = $n_1(\\overline{x_1} - \\overline{\\overline{x}}) + .. + n_k(\\overline{x_k} - \\overline{\\overline{x}})$\\\n",
+    "A measure of how difference the k sample mean $x_1,x_2,..,x_k$ are from one another; associated df = k - 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Error sum of square:</b> SSE = $(n_1-1)s^2_1+..+(n_k-1)s^2_k$\\\n",
+    "A measure of the amount of variability within the individual samples; associated df = N - k where $N=n_1+n_2+..+n_k$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Mean Square</b>$F = \\frac{MStr}{MSE}$\\\n",
+    "A sume of squares divided by its df.\\\n",
+    "MStr = SSTr/(k-1) and MSE = SSE/(N-k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "SSTo = SSTr + SSE: The fundamental identity in single-factor ANOVA, where SSTO = total sum of squares = $\\Sigma(x-\\overline{x})^2$"
+   ]
   }
  ],
  "metadata": {
